--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,5 @@ deploy:
     branch: master
   access_key_id:
     secure: $AWS_ACCESS_KEY
-  secret_key_id:
+  secret_access_id:
     secure: $AWS_SECRET_KEY
