--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,15 @@
 {
-    "dependencies": {
-        "express": "4.16.3",
-        "pg": "7.4.3",
-        "redis": "2.8.0",
-        "cors": "2.8.4",
-        "nodemon": "1.18.3",
-        "body-parser": "*"
-    },
-    "scripts": {
-        "dev": "nodemon",
-        "start": "node index.js"
-    }
+  "dependencies": {
+    "body-parser": "*",
+    "cors": "2.8.4",
+    "express": "4.16.3",
+    "mongoose": "^5.7.5",
+    "nodemon": "1.18.3",
+    "pg": "7.4.3",
+    "redis": "2.8.0"
+  },
+  "scripts": {
+    "dev": "nodemon",
+    "start": "node index.js"
+  }
 }
