--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,8 @@ upstream api {
 server {
     listen 80;
 
+    proxy_read_timeout 3600;
+
     location / {
         proxy_pass http://client;
     }
