--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
     "cors": "2.8.4",
     "express": "4.16.3",
     "mongoose": "^5.7.5",
-    "nodemon": "1.18.3",
+    "nodemon": "^1.19.4",
     "pg": "7.4.3",
     "redis": "2.8.0"
   },
   "scripts": {
     "dev": "nodemon",
-    "start": "node index.js"
+    "start": "nodemon index.js",
+    "serve": "nodemon index.js"
   }
 }
