--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ deploy:
   bucket_name: elasticbeanstalk-us-east-2-004804005847
   bucket_path: docker-multi
   on:
-    branch: master
+    branch: prod
   access_key_id:
     secure: $AWS_ACCESS_KEY
   secret_access_key:
