--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.2",
     "aws-sdk": "^2.553.0",
     "axios": "^0.18.0",
     "react": "^16.8.6",
