--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.5.2",
     "aws-sdk": "^2.553.0",
     "axios": "^0.18.0",
+    "echarts": "^4.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.2.2",
