--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "aws-sdk": "^2.553.0",
     "axios": "^0.18.0",
     "echarts": "^4.4.0",
+    "echarts-for-react": "^2.0.15-beta.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.2.2",
