--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: 'mongo'
     ports:
       - '27017:27017'
-  redis:
-    image: 'redis:latest'
+  # redis:
+  #   image: 'redis:latest'
   nginx:
     restart: always
     build:
@@ -22,9 +22,9 @@ services:
     volumes:
       - /app/node_modules
       - ./server:/app
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+    # environment:
+    #   - REDIS_HOST=redis
+    #   - REDIS_PORT=6379
     depends_on:
       - mongo
   # Client service
@@ -35,13 +35,13 @@ services:
     volumes:
       - /app/node_modules
       - ./client:/app
-  worker:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./worker
-    volumes:
-      - /app/node_modules
-      - ./worker:/app
-    environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+  # worker:
+  #   build:
+  #     dockerfile: Dockerfile.dev
+  #     context: ./worker
+  #   volumes:
+  #     - /app/node_modules
+  #     - ./worker:/app
+  #   environment:
+  #     - REDIS_HOST=redis
+  #     - REDIS_PORT=6379
