--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.5.2",
+    "@material-ui/icons": "^4.5.1",
     "aws-sdk": "^2.553.0",
     "axios": "^0.18.0",
     "echarts": "^4.4.0",
