--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.8.6",
     "react-markdown": "^4.2.2",
     "react-router-dom": "4.3.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-swipeable-views": "^0.13.3"
   },
   "scripts": {
     "start": "react-scripts start",
