--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.2.2",
+    "react-player": "^1.13.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3"
