--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.4.0",
     "echarts-for-react": "^2.0.15-beta.1",
+    "emoji-dictionary": "^1.0.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.2.2",
