--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.5.2",
     "@material-ui/icons": "^4.5.1",
+    "@types/jest": "^24.0.22",
+    "@types/node": "^12.12.6",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-swipeable-views": "^0.13.0",
     "aws-sdk": "^2.553.0",
     "axios": "^0.18.0",
     "echarts": "^4.4.0",
@@ -16,7 +21,8 @@
     "react-player": "^1.13.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "3.0.1",
-    "react-swipeable-views": "^0.13.3"
+    "react-swipeable-views": "^0.13.3",
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
