--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,8 @@
     "dev": "nodemon",
     "start": "nodemon index.js",
     "serve": "nodemon index.js"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.2"
   }
 }
