--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.566.0",
     "body-parser": "*",
+    "connect-multiparty": "^2.2.0",
     "cors": "2.8.4",
     "express": "4.16.3",
     "mongoose": "^5.7.5",
