--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,11 @@
     "connect-multiparty": "^2.2.0",
     "cors": "2.8.4",
     "express": "4.16.3",
+    "file-type": "^12.4.0",
     "mongoose": "^5.7.5",
     "nodemon": "^1.19.4",
     "pg": "7.4.3",
+    "read-chunk": "^3.2.0",
     "redis": "2.8.0"
   },
   "scripts": {
