--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "echarts": "^4.4.0",
     "echarts-for-react": "^2.0.15-beta.1",
     "emoji-dictionary": "^1.0.10",
+    "mime": "^2.4.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-markdown": "^4.2.2",
