--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "connect-multiparty": "^2.2.0",
     "cors": "2.8.4",
     "express": "4.16.3",
+    "mime": "^2.4.4",
     "mongoose": "^5.7.5",
     "nodemon": "^1.19.4",
     "pg": "7.4.3",
