--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^12.12.6",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/react-router-dom": "^5.1.2",
     "@types/react-swipeable-views": "^0.13.0",
     "aws-sdk": "^2.553.0",
     "axios": "^0.18.0",
