--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3",
+    "react-transition-group": "^4.3.0",
     "typescript": "^3.7.2"
   },
   "scripts": {
